# PriceRe

./: .env.example  .gitignore  API_SETUP.md  CHAT_DEPLOYMENT_GUIDE.md  COMPLETE_ARCHITECTURE.md  GETTING_STARTED.md  HOW_MRCLEAN_WORKS.md  HYBRID_DATA_ARCHITECTURE.md  LAUNCH_MVP.md  OPENAI_SETUP.md  PHASE2_SUMMARY.md  README.md  REAL_WORLD_COMPARISON.md  REINSURANCE_VS_DIRECT.md  USER_GUIDE.md  activate_pricingflow.sh  create_messy_excel_test.py  create_test_data.py  debug_upload.py  processed_data.db  production_demo.py  production_pricing.db  pyproject.toml  requirements.txt  run_refactored_app.py  setup_user_environment.py  start_chat_server.py  start_platform.sh  test_cleaning_ui.py  test_complete_system.py  test_data_generator.py  test_enhanced_profiler.py  test_excel_upload.py  test_hybrid_system.py  test_new_semantic_system.py  test_openai_integration.py  test_production_system.py  test_real_user_experience.py  test_simple_upload.py
api/: chat_server.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
config/: actuarial_config.json  system_config.yaml
data/synthetic/: sample_life_insurance.csv
data/test_results/: claims_features.csv  portfolio_features.csv  treaty_features.csv
data/uploads/: integrated_multifile_samples.csv  sample_claims.csv  sample_portfolio.csv  (+6 more)
docs/: real_world_pricing_workflow.md
scripts/: generate_sample_data.py  install_streamlit.py  setup.py  setup_venv.py  test_basic_functionality.py  test_reinsurance_simple.py  test_reinsurance_system.py
src/: __init__.py
test_data/: test_data.json  test_fixed_width.txt
test_scenarios/: life_savings_retirement_scenarios.py  run_scenario_tests.py  scenario_test_results.json  simplified_test.py
ui/: actuarial_pricing_mvp.py  actuarial_workbench.py  app.py  comprehensive_pricing_platform.py  comprehensive_pricing_platform.py.backup  demo.py  fixed_upload_platform.py  professional_pricing_platform.py  reinsurance_mvp.py  reinsurance_pricing_platform.py  universal_data_upload.py
(+93 files in other folders)
